# StealthHunter

./: .gitignore  CMakeLists.txt  README.md  check_nosql_injection.c  check_nosql_injection.h  check_sql_injection.c  check_xss.c  check_xss.h  colors.c  colors.h  dirbusting.c  dirbusting.h  main.c  test.c  test.h  utils.c  utils.h  version.h
payloads/: xss.plsh
src/: check_nosql_injection.c  check_sql_injection.c  check_xss.c  colors.c  dirbusting.c  main.c  utils.c
src/include/: check_sql_injection.h
wordlist/: dirbusting.wlsh
